Activity Daftar Inap

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#4B850C</color>
+    <color name="greenblue">#15AFA7</color>
 </resources>
