--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,19 +26,19 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="203dp"
-            android:layout_height="45dp"
+            android:layout_width="wrap_content"
+            android:layout_height="53dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="22dp"
             android:layout_marginTop="70dp"
             android:layout_marginEnd="159dp"
-            android:layout_marginBottom="105dp"
+            android:layout_marginBottom="97dp"
             android:text="Pelayanan Kesehatan \napa yang sedang dicari?"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -47,14 +47,23 @@
             android:layout_height="30dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="163dp"
-            android:layout_marginBottom="-145dp"
+            android:layout_marginStart="22dp"
+            android:layout_marginEnd="159dp"
+            android:layout_marginBottom="-155dp"
             android:text="Tenang, Kami bantu carikan ya.."
             android:textColor="@color/white" />
 
 
     </RelativeLayout>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/pindah"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="pindah"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topPanel">
+
+    </androidx.appcompat.widget.AppCompatButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
