--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,26 +56,42 @@
 
     </RelativeLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/pindah"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="pindah"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanel">
-
-    </androidx.appcompat.widget.AppCompatButton>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/pindah1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="pindah1"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <!-- RecyclerView for the grid -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/topPanel"
-        app:layout_constraintVertical_bias="0.624"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="16dp"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"
+        android:layout_marginLeft="17dp"/>
 
-    </androidx.appcompat.widget.AppCompatButton>
+
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/pindah"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="pindah"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/topPanel">-->
+
+<!--    </androidx.appcompat.widget.AppCompatButton>-->
+
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/pindah1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="pindah1"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/topPanel"-->
+<!--        app:layout_constraintVertical_bias="0.624"-->
+<!--        tools:layout_editor_absoluteX="0dp">-->
+
+<!--    </androidx.appcompat.widget.AppCompatButton>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
