--- a/app/src/main/res/layout/activity_daftar_inap.xml
+++ b/app/src/main/res/layout/activity_daftar_inap.xml
@@ -27,7 +27,7 @@
         android:textAlignment="center"
         android:textSize="32sp"
         android:textStyle="bold"/>
-    
+
     <ImageView
         android:layout_width="180dp"
         android:layout_height="187dp"
@@ -49,13 +49,12 @@
 
         <!-- Bagian Nama -->
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/nama"
+            android:id="@+id/ti1"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="322dp"
-            android:layout_height="60dp"
+            android:layout_height="67dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="14dp"
             app:helperText="Nama"
@@ -65,8 +64,9 @@
             app:hintTextColor="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/nama"
                 android:layout_width="320dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:hint="Nama"
                 android:imeOptions="actionNext"
@@ -81,12 +81,12 @@
 
         <!-- Bagian NIK -->
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/NIK"
-            android:layout_below="@+id/nama"
+            android:id="@+id/ti2"
+            android:layout_below="@+id/ti1"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="322dp"
-            android:layout_height="57dp"
-            android:layout_marginTop="7dp"
+            android:layout_height="67dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="14dp"
@@ -98,8 +98,9 @@
             app:boxBackgroundColor="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/nik"
                 android:layout_width="320dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:hint="NIK"
                 android:imeOptions="actionNext"
@@ -114,12 +115,12 @@
 
         <!-- Bagian Tempat Tinggal Lahir -->
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/ttl"
-            android:layout_below="@+id/NIK"
+            android:id="@+id/ti3"
+            android:layout_below="@+id/ti2"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="322dp"
-            android:layout_height="57dp"
-            android:layout_marginTop="7dp"
+            android:layout_height="67dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="14dp"
@@ -131,8 +132,9 @@
             app:boxBackgroundColor="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ttl"
                 android:layout_width="320dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:hint="Tempat Tanggal Lahir"
                 android:imeOptions="actionNext"
@@ -147,12 +149,12 @@
 
         <!-- Bagian NIK -->
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/no"
-            android:layout_below="@+id/ttl"
+            android:id="@+id/ti4"
+            android:layout_below="@+id/ti3"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="322dp"
-            android:layout_height="57dp"
-            android:layout_marginTop="7dp"
+            android:layout_height="67dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="14dp"
@@ -164,8 +166,9 @@
             app:boxBackgroundColor="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/noTelp"
                 android:layout_width="320dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:hint="Nomor Telpon"
                 android:imeOptions="actionNext"
@@ -180,11 +183,12 @@
 
         <!-- Bagian NIK -->
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_below="@+id/no"
+            android:id="@+id/ti5"
+            android:layout_below="@+id/ti4"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="322dp"
-            android:layout_height="57dp"
-            android:layout_marginTop="7dp"
+            android:layout_height="67dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="14dp"
@@ -196,8 +200,9 @@
             app:boxBackgroundColor="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/noBpjs"
                 android:layout_width="320dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:hint="No BPJS"
                 android:imeOptions="actionNext"
